applications/task-tracker-app/overlays/local/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: local
  labels:
    istio-injection: enabled
    #cert-manager-tls: local # Define namespace label for kubed
