applications/task-tracker-app/overlays/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/service-upstream: "true"
    #nginx.ingress.kubernetes.io/upstream-vhost: task-tracker-app-ui.local.svc.cluster.local
spec:
  rules:
  - host: staging.mlops-playground.com
    http:
      paths:     
        - path: /
          pathType: Prefix
          backend:
            service:
              name: istio-ingressgateway
              port:
                number: 443 # even though ingress traffic will be directed to the service
                            # it will be intercepted bt the istio- sidecar proxy and redirected to the mesh
